# runner-programming-language-scripts

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  del.json  docker-compose.yml
client/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
client/src/: App.vue  main.ts  style.css
client/src/components/: CodeEditor.vue  PanelRunAndEditedScripts.vue  ScriptCopy.vue  ScriptEdit.vue  ScriptMenu.vue  ScriptNew.vue  ScriptNewFrom.vue  ScriptNewFromTemplate.vue  ScriptSearch.vue  ScriptSort.vue  ScriptStatus.vue  ScriptView.vue  ScriptWorkedResult.vue
client/src/composables/: useAuth.ts
client/src/entities/mappers/: script.map.ts
client/src/entities/script/: index.ts  routes.map.ts  types.ts
client/src/entities/scripts/: index.ts  routes.map.ts  types.ts
client/src/pages/: LoginPage.vue  PanelPage.vue  RegisterPage.vue
client/src/router/: constants.ts  index.ts
client/src/services/: auth.ts  httpClient.ts
client/src/shared/: constants.ts
client/src/shared/types/: auth.ts  common.ts  components.ts
scripts/: Get Book 1.py  Get Booking.py  SpaceX Capsules.py  args_demo.py  descriptions.json  hello.py  json_placeholder.py  json_placeholder_2.py  json_placeholder_4.py  json_placeholder_444.py  json_placeholder_albums.py  json_placeholder_comments.py  json_placeholder_photos.py  json_placeholder_posts.py  json_placeholder_todos.py  json_placeholder_users.py  math.py
src/: app_state.rs  auth_middleware.rs  db.rs  error.rs  handlers.rs  jwt.rs  main.rs  models.rs  script_runner.rs
src/migrations/: mod.rs  v1_create_collection.rs  v2_fix_date_fields.rs  v3_force_fix_dates.rs  v4_create_user_collection.rs  v5_create_superadmin.rs
