[package]
name = "rust_python_axum"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
wait-timeout = "0.2"
