[package]
name = "rust_python_axum"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
wait-timeout = "0.2"
tower-http = { version = "0.6.8", features = ["cors", "validate-request", "set-header", "propagate-header"] }
log = "0.4.29"
chrono = { version = "0.4.44", features = ['serde'] }

[build-dependencies]
