[package]
name = "script-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
thiserror = "2.0"
bytes = "1.10"
mongodb = "3.5.1"
anyhow = "1.0"
async-trait = "0.1.83"
bcrypt = "0.19.0"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }